--- a/.gitignore
+++ b/.gitignore
@@ -14,29 +14,43 @@
 /glances/*
 deps
 .uuid
-/tts/*
+*.html
+*.fault
+/tts
 /www/audio/*
 /www/community/*/*
 /custom_components/*/*
 /node-red/*
-
+/helpers/microsoft-speech
+/zigbee2mqtt/*
+/sensors/snmp.yaml
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
 scripts.yaml
 secrets.yaml
 known_devices.yaml
-
+/image/
 /secrets.yaml
 /esphome/secrets.yaml
 /esphome/includes/secrets.yaml
-
-
+/glances
+/double-take
+/custom_components
+/blueprints/
 google_api.json
 users-list
 Rpi_server_private_key
 entity_log.txt
-/www/*.jpg
+/www/community
+/www/makis_2.jpg
+/www/makis.jpg
+/www/pavlina.jpg
+/www/sofia.jpg
+/www/thanasis.jpg
 *.disabled
 alexa*.html
 *.log
+*.log.1
+frigate.yml
 twilio-credentials.sh
+.sonoff.json
