--- a/esphome/porta_cam.yaml
+++ b/esphome/porta_cam.yaml
@@ -12,11 +12,6 @@ packages:
   wifi: !include common_substitutions/wifi.yaml
   device_base: !include common_substitutions/device_base.yaml
 
-wifi:
-  networks:
-  - ssid: "Erasmia"
-    password: !secret wifi_password
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
 
 binary_sensor:
   - platform: gpio
@@ -86,7 +81,7 @@ font:
     size: 8
   - file: 'fonts/BebasNeue-Regular.ttf'
     id: font2
-    size: 48
+    size: 30
   - file: 'fonts/arial.ttf'
     id: font3
     size: 14
@@ -94,11 +89,11 @@ font:
 time:
   - platform: homeassistant
     id: homeassistant_time
-    on_time:
-      # Every 30 minutes
-      - minutes: 30
-        then:
-          - switch.toggle: restart_switch
+    # on_time:
+    #   # Every 30 minutes
+    #   - minutes: 30
+    #     then:
+    #       - switch.toggle: restart_switch
 
 display:
   - platform: ssd1306_i2c
@@ -106,21 +101,12 @@ display:
     rotation: 180
     address: 0x3C
     lambda: |-
-      // Print "Spiti" in top center.
-      it.printf(64, 0, id(font1), TextAlign::TOP_CENTER, "Eksipno Spiti");
-
-      // Print time in HH:MM format
-      it.strftime(0, 60, id(font2), TextAlign::BASELINE_LEFT, "%H:%M", id(homeassistant_time).now());
-
-      // Print inside temperature (from homeassistant sensor)
+      it.strftime(20, 0, id(font2), "%H:%M:%S", id(homeassistant_time).now());
       if (id(inside_temperature).has_state()) {
-        it.printf(127, 23, id(font3), TextAlign::TOP_RIGHT , "%.1f°", id(inside_temperature).state);
+        it.printf(0, 60, id(font2), TextAlign::BOTTOM_LEFT, "%.1f°C %.1f%%", id(outside_temperature).state, id(outside_humidity).state);
       }
 
-      // Print outside temperature (from homeassistant sensor)
-      if (id(outside_temperature).has_state()) {
-        it.printf(127, 60, id(font3), TextAlign::BASELINE_RIGHT , "%.1f°", id(outside_temperature).state);
-      }
+
     # lambda: |-
     #   it.strftime(64, 0, id(tnr1), TextAlign::TOP_CENTER,"%d-%m-%Y", id(homeassistant_time).now());
     #   it.strftime(64, 64, id(tnr2), TextAlign::BASELINE_CENTER, "%H:%M", id(homeassistant_time).now());
@@ -128,3 +114,20 @@ display:
 #    lambda: |-
 #      it.strftime(0, 0, id(my_font), "%H:%M", id(time).now());
  #     it.printf(0, 20, id(my_font), "sensor: %.1f", id(volt).state);
+ 
+    # lambda: |-
+    #   // Print "Spiti" in top center.
+    #   it.printf(64, 0, id(font1), TextAlign::TOP_CENTER, "Eksipno Spiti");
+
+    #   // Print time in HH:MM format
+    #   it.strftime(0, 60, id(font2), TextAlign::BASELINE_LEFT, "%H:%M", id(homeassistant_time).now());
+
+    #   // Print inside temperature (from homeassistant sensor)
+    #   if (id(inside_temperature).has_state()) {
+    #     it.printf(127, 23, id(font3), TextAlign::TOP_RIGHT , "%.1f°", id(inside_temperature).state);
+    #   }
+
+    #   // Print outside temperature (from homeassistant sensor)
+    #   if (id(outside_temperature).has_state()) {
+    #     it.printf(127, 60, id(font3), TextAlign::BASELINE_RIGHT , "%.1f°", id(outside_temperature).state);
+    #   }
