--- a/esphome/saloni.yaml
+++ b/esphome/saloni.yaml
@@ -4,8 +4,8 @@ substitutions:
 
 esphome:
   name: $devicename
-  platform: ESP8266
-  board: nodemcuv2
+  platform: ESP32
+  board: esp-wrover-kit
   comment: "Motion sensor for the living room" 
   on_loop:
     then:
@@ -14,6 +14,19 @@ esphome:
 packages:
   wifi: !include common_substitutions/wifi.yaml
   device_base: !include common_substitutions/device_base.yaml
+
+esp32_ble_tracker:
+
+sensor:
+  - platform: xiaomi_lywsd03mmc
+    mac_address: "A4:C1:38:79:0E:2C"
+    bindkey: "6308307e74406ef3e0a0f5a57a4e4ff3"
+    temperature:
+      name: "Saloni Temperature"
+    humidity:
+      name: "Saloni Humidity"
+    battery_level:
+      name: "Saloni Battery Level"
 
 binary_sensor:
   - platform: gpio
@@ -43,3 +56,37 @@ binary_sensor:
   #           service: light.toggle
   #           data:
   #             entity_id: light.kouzina
+  
+remote_transmitter:
+  pin: 
+    number: GPIO2
+    inverted : false
+  carrier_duty_percent: 50%
+  id: trsr
+
+status_led:
+  pin: GPIO2
+
+      
+api:
+  services:
+    - service: transmit_raw
+      variables:
+        code: int[]
+      then:
+        - remote_transmitter.transmit_raw:
+            code: !lambda 'return code;'
+            carrier_frequency: 38kHz
+    - service: transmit_raw_repeat
+      variables:
+        code: int[]
+        carrier_frequency: float
+        repeat_times: int
+        repeat_wait_time_us: int
+      then:
+        - remote_transmitter.transmit_raw:
+            code: !lambda 'return code;'
+            carrier_frequency: !lambda 'return carrier_frequency;'
+            repeat:
+              times: !lambda 'return repeat_times;'
+              wait_time: !lambda 'return repeat_wait_time_us;'
