--- a/esphome/sonoff_basic_2.yaml
+++ b/esphome/sonoff_basic_2.yaml
@@ -8,15 +8,16 @@ esphome:
   board: esp01_1m
 
 packages:
+  wifi: !include common_substitutions/wifi.yaml
   device_base: !include common_substitutions/device_base.yaml
 
 #Sonoff Basic seems to have issues with "connecting to wifi" loops. Fast connect and specifying bssid seem to avoid this for now
-wifi:
-  networks:
-    ssid: "HOME"
-    password: !secret wifi_password
-    bssid: "94:A7:B7:32:09:7C"
-  fast_connect: true
+# wifi:
+#   networks:
+#     ssid: "HOME"
+#     password: !secret wifi_password
+#     bssid: "94:A7:B7:32:09:7C"
+#   fast_connect: true
 
 #Web server active seems to also help somehow. Need to look into a better solution overall
 # web_server:
