--- a/cameras/combined.yaml
+++ b/cameras/combined.yaml
@@ -1,11 +1,18 @@
 - platform: combined
   base_address: !secret base_url
   entities:
-    - camera.koudoni_ttgocam_camera
-    - camera.veranta_hd_mjpeg
-    - camera.saloni_mjpeg
-    - camera.kouzina_mjpeg
-    - camera.kipos_mjpeg
     - camera.eisodos_hd_mjpeg
-    # - camera.domatio_mjpeg
-    - camera.erythres
+    - camera.veranta_hd_mjpeg
+    - camera.avli
+    - camera.kipos_mjpeg
+    - camera.kouzina_mjpeg
+    - camera.outside
+    - camera.koudoni_ttgocam_camera
+
+- platform: combined
+  base_address: !secret base_url
+  entities:
+    - camera.eisodos_person
+    - camera.veranda_person
+    - camera.kipos_person
+    - camera.kouzina_person
